@@ -19,6 +19,7 @@ Version 1.0.8.8
      * HicEst (Georg Petrich)
      * Icon (Matt Oates)
      * MagikSF (Sjoerd van Leent)
+     * Modula 2 (Benjamin Kowarsch)
      * Oz (Wolfgang Meyer)
      * PCRE (BenBE)
      * q/kdb+ (Ian Roddis)
